# rust_weather

./: Cargo.toml  README.md
src/: city.json  main.rs
